added a endpoint where users can view their profile and also added about_me and last_seen to the user model which keep track of user's last seen and their about me

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,15 @@
   <div>
     Microblog:
     <a href="{{ url_for('index') }}">Home</a>
-    <a href="{{ url_for('login') }}">Login</a>
+
+    {% if current_user.is_anonymous %}
+      <a href="{{ url_for('login') }}">Login</a>
+
+    {% else %}
+      <a href="{{url_for('logout')}}">Logout</a>
+    {% endif %}
+    <a href="{{url_for('user', username=current_user.username)}}">Profile</a>
+    <p>New user? <a href="{{url_for('register')}}">Register</a></p>
   </div>
   <hr />
 
