--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -7,10 +7,13 @@
             <td>
                 <h1>User: {{ user.username }}</h1>
                 {% if user.about_me %} 
-                    {{user.about_me}}
+                    {{user.about_me}} <br>
                 {% endif %}
                 {% if user.last_seen %}
-                    {{user.last_seen}}
+                    {{user.last_seen}} <br>
+                {% endif %}
+                {% if user == current_user %}
+                   <p><a href="{{ url_for('edit_profile') }}">Edit Your Profile</a></p>
                 {% endif %}
             </td>
         </tr>
